--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -86,7 +86,7 @@
                         <div class="footer-contact-info ">
                             <div class="footer-address ">
                                 <span><i class="fas fa-map-marker-alt "></i></span>
-                                <p> 3556 Beech Street, San Francisco,<br> California, CA 94108 </p>
+                                <p> Nh 8, Avenue Bouganvillea, Mahipalpur,<br> New Delhi, Delhi 110037 </p>
                             </div>
                             <p>
                                 <!-- <i class="fas fa-phone-alt "></i> +1 315 369 5943 -->
