--- a/src/app/module/contact-us/contact-us.component.html
+++ b/src/app/module/contact-us/contact-us.component.html
@@ -6,12 +6,6 @@
         <div class="container-fluid">
             <div class="row align-items-center">
                 <div class="col-md-12 col-12">
-                    <nav aria-label="breadcrumb" class="page-breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Contact Page</li>
-                        </ol>
-                    </nav>
                     <h2 class="breadcrumb-title">Contact Information and Enquiry Form</h2>
                 </div>
             </div>
@@ -30,8 +24,8 @@
                         </div>
                         <div class="c-info">
                             <h4>Address</h4>
-                            <p>55 West, 33rd Street</p>
-                            <p>5th Floor, New York</p>
+                            <p>Nh 8 Mahipalpur,</p>
+                            <p>New Delhi, Delhi 110037</p>
                         </div>
                     </div>
                 </div>
@@ -43,8 +37,7 @@
                         </div>
                         <div class="c-info">
                             <h4>email</h4>
-                            <p>info@dentzone.com</p>
-                            <p>email@gmail.com</p>
+                            <p> teladentist@gmail.com</p>
                         </div>
                     </div>
                 </div>
@@ -56,8 +49,8 @@
                         </div>
                         <div class="c-info">
                             <h4>Phone</h4>
-                            <p>(888) 4421-1238-32</p>
-                            <p>(888) 838-1238-645</p>
+                            <p>(91) 9899799981</p>
+                            <p>(91) 9899799982</p>
                         </div>
                     </div>
                 </div>
@@ -100,7 +93,7 @@
             <div class="col-md-6">
 
                 <div class="map-view">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26373919.386353854!2d-113.76666163476126!3d36.203706779654745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited%20States!5e0!3m2!1sen!2sin!4v1606988919902!5m2!1sen!2sin"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3505.101847243413!2d77.11250531516517!3d28.536658295164436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd309eebed77%3A0xb122512dfb18ffad!2sCelebration%20Gardens!5e0!3m2!1sen!2sin!4v1615982932581!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
 
             </div>
