--- a/src/app/module/infobytes/infobytes.component.html
+++ b/src/app/module/infobytes/infobytes.component.html
@@ -81,9 +81,6 @@
             </div>
         </section>
 
-
-
-
         <section class="section section-lg bg-image-2">
             <div class="container text-center">
                 <div class="row justify-content-center">
@@ -92,9 +89,13 @@
                         <p class="wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">Let our team handle all your dental healthcare issues.</p>
                         <p class="wow fadeInUp text-secondary text-md font-weight-regular" style="visibility: visible; animation-name: fadeInUp;">Free Consultation from Our Expert Advisors</p>
                         <a class="wow fadeInUp text-xxl font-weight-bold" href="tel:#" style="visibility: visible; animation-name: fadeInUp;">
-                            <h2> +1 3153695943</h2>
+                            <h2> +91 9899799981</h2>
+                            <h2> +91 9899799982</h2>
                         </a>
-                        <a class="wow fadeInLeft button button-primary button-shadow button-md button-xxl btn-grad" href="#" data-wow-delay=".5s" style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInLeft;">Request a Callback | Book An Appointment</a>
+                        <div class="row">
+                            <a class="wow animate__animated animate__fadeInUp animate__slower  button button-primary button-shadow button-md button-xxl btn-grad  animate__delay-5s 5s" href="javascript:void(0);">Request a Callback</a>
+                            <a class="wow animate__animated animate__fadeInUp animate__slower  button button-primary button-shadow button-md button-xxl btn-grad  animate__delay-5s 5s" routerLink="/online-consultation" [queryParams]="{limit: 10, skip: 0 }">Book An Appointment</a>
+                        </div>
                     </div>
                 </div>
             </div>
