--- a/src/app/module/index/index.component.html
+++ b/src/app/module/index/index.component.html
@@ -74,20 +74,24 @@
                         <div class="row align-items-center">
                             <div class="col-md-8 col-xl-6 text-center text-sm-left">
                                 <h1 class="wow  grad-text animate__animated animate__slideInLeft
-                                animate__slower animate__delay-4s 4s" style=" font-weight: bolder;">Do you feel a twinge in your teeth sometimes, but not sure why?</h1>
+                                animate__slower animate__delay-1s 1s" style=" font-weight: bolder;">Do you feel a twinge in your teeth sometimes, but not sure why?</h1>
                                 <p class="wow  big animate__animated animate__slideInLeft
-                                animate__slower animate__delay-4s 4s">Assess your oral health from the comfort of home by taking a brief online oral assessment test.
+                                animate__slower animate__delay-1s 1s">Assess your oral health from the comfort of home by taking a brief online oral assessment test.
                                 See the impact of your lifestyle, medical conditions, and your past dental history on the overall
                                 health of our mouth.</p>
-                                <div class="button-group group-sm justify-content-center justify-content-sm-start d-flex flex-wrap">
+                                <!-- <div class="button-group group-sm justify-content-center justify-content-sm-start d-flex flex-wrap">
                                     <a class="wow  button button-primary button-shadow button-md btn-grad animate__animated animate__slideInLeft
                                     animate__slower animate__delay-4s 4s" href="#">START THE ORAL TEST NOW!</a>
+                                </div> -->
+                                <div class="button-group group-sm justify-content-center justify-content-sm-start d-flex flex-wrap">
+                                    <a class="wow  button button-primary button-shadow button-md btn-grad animate__animated animate__slideInLeft
+                                    animate__slower animate__delay-1s 1s" href="javascript:void(0);">COMING SOON!</a>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-md-4 ">
   
                                 <img src="assets/img/bg4.png" alt="" class="img-fluid animate__animated animate__slideInRight
-                                animate__slower animate__delay-4s 4s">
+                                animate__slower animate__delay-1s 1s">
                             </div>
                         </div>
                     </div>
@@ -98,9 +102,9 @@
                         <div class="row">
                             <div class="col-12">
                                 <h2 class="grad-text text-center animate__animated animate__slideInLeft
-                                animate__slower animate__delay-5s 5s">About Family Oral Health</h2>
+                                animate__slower animate__delay-1s 1s">About Family Oral Health</h2>
                                 <p class="wow  big animate__animated animate__slideInLeft
-                                animate__slower animate__delay-4s 4s">Have you heard that you should only take care of the teeth you want to keep?
+                                animate__slower animate__delay-1s 1s text-center">Have you heard that you should only take care of the teeth you want to keep?
                                 It stands true.</p>
                             </div>
   
@@ -109,7 +113,7 @@
   
                             <div class="col-md-3">
                                 <div class="nav flex-column nav-pills animate__animated animate__slideInLeft
-                                animate__slower animate__delay-5s 5s" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                                animate__slower animate__delay-1s 1s" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                                     <a class="nav-link active" id="v-pills-one-tab" data-toggle="pill" href="#v-pills-one" role="tab" aria-controls="v-pills-one" aria-selected="true">Child </a>
                                     <a class="nav-link" id="v-pills-two-tab" data-toggle="pill" href="#v-pills-two" role="tab" aria-controls="v-pills-two" aria-selected="false">Men</a>
                                     <a class="nav-link" id="v-pills-three-tab" data-toggle="pill" href="#v-pills-three" role="tab" aria-controls="v-pills-three" aria-selected="false">Women</a>
@@ -117,7 +121,7 @@
                                 </div>
                             </div>
                             <div class="col-md-9 shadow animate__animated animate__slideInRight
-                            animate__slower animate__delay-5s 5s">
+                            animate__slower animate__delay-1s 1s">
                                 <div class="tab-content " id="v-pills-tabContent">
                                     <div class="tab-pane fade show active" id="v-pills-one" role="tabpanel" aria-labelledby="v-pills-one-tab">
                                         <div class="row">
@@ -427,109 +431,7 @@
                     </div>
                 </section> -->
   
-                <!-- /find a clinic -->
-  
-                <!-- TESTIMONIALS -->
-                <section class="section section-lg section-xl-custom">
-                    <div class="customer-feedback">
-                        <div class="container text-center">
-                            <div class="row">
-                                <div class="col-md-12">
-  
-                                    <h2 class="section-title grad-text text-center">Testimonials</h2>
-  
-                                </div>
-                                <!-- /End col -->
-                            </div>
-                            <!-- /End row -->
-  
-                            <div class="row">
-  
-                                <div class="col-md-3"></div>
-  
-                                <div class=" col-md-6  ">
-                                    <div class="owl-carousel feedback-slider">
-  
-                                        <!-- slider item -->
-                                        <div class="feedback-slider-item">
-                                            <img src="assets/img/team/t1.jpg" class="center-block rounded-circle" alt="Customer Feedback">
-                                            <h3 class="customer-name">Lisa Redfern</h3>
-                                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It is a long established fact that a reader will be distracted by the readable its layout.</p>
-                                            <span class="light-bg customer-rating" data-rating="5">
-                                                5
-                                                <i class="fa fa-star"></i>
-                                            </span>
-                                        </div>
-                                        <!-- /slider item -->
-  
-                                        <!-- slider item -->
-                                        <div class="feedback-slider-item">
-                                            <img src="assets/img/team/t2.jpg" class="center-block rounded-circle" alt="Customer Feedback">
-                                            <h3 class="customer-name">Cassi</h3>
-                                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It is a long established fact that a reader will be distracted by the readable its layout.</p>
-                                            <span class="light-bg customer-rating" data-rating="4">
-                                                4
-                                                <i class="fa fa-star"></i>
-                                            </span>
-                                        </div>
-                                        <!-- /slider item -->
-  
-                                        <!-- slider item -->
-                                        <div class="feedback-slider-item">
-                                            <img src="assets/img/team/t3.jpg" class="center-block rounded-circle" alt="Customer Feedback">
-                                            <h3 class="customer-name">Md Nahidul</h3>
-                                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It is a long established fact that a reader will be distracted by the readable its layout.</p>
-                                            <span class="light-bg customer-rating" data-rating="5">
-                                                5
-                                                <i class="fa fa-star"></i>
-                                            </span>
-                                        </div>
-                                        <!-- /slider item -->
-  
-                                    </div>
-                                    <!-- /End feedback-slider -->
-  
-                                    <!-- side thumbnail -->
-                                    <div class="feedback-slider-thumb hidden-xs">
-                                        <div class="thumb-prev">
-                                            <span>
-                                                <img src="assets/img/team/t1.jpg" alt="Customer Feedback">
-                                            </span>
-                                            <span class="light-bg customer-rating">
-                                                5
-                                                <i class="fa fa-star"></i>
-                                            </span>
-                                        </div>
-  
-                                        <div class="thumb-next">
-                                            <span>
-                                                <img src="assets/img/team/t2.jpg" alt="Customer Feedback">
-                                            </span>
-                                            <span class="light-bg customer-rating">
-                                                4
-                                                <i class="fa fa-star"></i>
-                                            </span>
-                                        </div>
-                                    </div>
-                                    <!-- /side thumbnail -->
-  
-                                </div>
-                                <!-- /End col -->
-  
-                                <div class="col-md-3"></div>
-                            </div>
-                            <!-- /End row -->
-                        </div>
-                        <!-- /End container -->
-                    </div>
-                    <!-- /End customer-feedback -->
-                </section>
-  
-  
-                <!-- END OF TESTIMONIALS -->
-  
-  
-  
+                <!-- /find a clinic -->  
   
                 <section class="section section-blogs section-lg section-xl-custom">
                     <div class="container-fluid">
@@ -537,7 +439,7 @@
                         <!-- Section Header -->
                         <div class="section-header text-center">
                             <h2 class="grad-text">Blogs and Articles</h2>
-                            <p class="sub-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <!-- <p class="sub-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
                         </div>
                         <!-- /Section Header -->
   
