--- a/src/app/module/doctors-panel/appointments/appointments.component.html
+++ b/src/app/module/doctors-panel/appointments/appointments.component.html
@@ -1,11 +1,33 @@
-
 <ngx-ui-loader [loaderId]="'loader-02'"></ngx-ui-loader>
 <!-- Breadcrumb -->
 <div class="breadcrumb-bar">
     <div class="container-fluid">
         <div class="row align-items-center">
-            <div class="col-md-12 col-12">
+            <div class="col-md-3 col-12">
                 <h2 class="breadcrumb-title">Appointments</h2>
+            </div>
+            <div class="col-md-4 col-12 d-md-block d-none">
+                <div class="sort-by">
+                    <span class="sort-title">Filter by</span>
+                    <span class="sortby-fliter">
+                        <select class="select form-control filter" id="status">
+                            <option class="All">All</option>
+                            <option class="Pending">Pending</option>
+                            <option class="Completed">Completed</option>
+                            <option class="Confirmed">Confirmed</option>
+                            <option class="ReScheduled">ReScheduled</option>
+                        </select>
+                    </span>
+                </div>
+            </div>
+            <div class="col-md-3 col-12">
+                <input type="text" placeholder="Select range" class="form-control filter" id="date" [maxDate]="maxDateType"
+                    (bsValueChange)="rangeDatesUpdated($event)"
+                    [bsConfig]="{rangeInputFormat: 'DD-MM-YYYY',  dateInputFormat: 'DD-MM-YYYY', isAnimated:'true', showWeekNumbers: false,containerClass:'theme-blue' }"
+                    bsDaterangepicker>
+            </div>
+            <div class="col-md-2 col-12">
+                <i class="fa fa-sync" data-toggle="tooltip" data-placement="top" title="Reset" (click)="reset()"></i>
             </div>
         </div>
     </div>
@@ -18,18 +40,21 @@
 
         <div class="row">
             <div class="col-md-5 col-lg-4 col-xl-3 theiaStickySidebar">
-            
+
                 <!-- PROFILE SIDEBAR -->
                 <app-doctor-sidebar></app-doctor-sidebar>
                 <!-- PROFILE SIDEBAR -->
-                
+
             </div>
-            
+
             <div class="col-md-7 col-lg-8 col-xl-9">
+
                 <div class="appointments">
-                
+
+
                     <!-- Appointment List -->
-                    <div class="appointment-list" *ngFor="let list of appointmentList |  paginate: { itemsPerPage: perPage, currentPage: currentPage, totalItems: total }, let i = index;">
+                    <div class="appointment-list"
+                        *ngFor="let list of appointmentList |  paginate: { itemsPerPage: perPage, currentPage: currentPage, totalItems: total }, let i = index;">
                         <div class="profile-info-widget">
                             <a href="javascript:void(0);" class="booking-doc-img">
                                 <img src="{{ list.imageUrl }}" alt="User Image">
@@ -37,44 +62,32 @@
                             <div class="profile-det-info">
                                 <h3><a href="javascript:void(0);">{{ list.name }}</a></h3>
                                 <div class="patient-details">
-                                    <h5><i class="far fa-clock"></i>{{ list.appointmentDate | date:'dd-MM-yyyy' }}, {{ list.appointmentTime }}</h5>
-                                    <h5><i class="fas fa-map-marker-alt"></i>  {{ list.city }},  {{ list.state }}</h5>
+                                    <h5><i class="far fa-clock"></i>{{ list.appointmentDate | date:'dd-MM-yyyy' }}, {{
+                                        list.appointmentTime }}</h5>
+                                    <h5><i class="fas fa-map-marker-alt"></i> {{ list.city }}, {{ list.state }}</h5>
                                     <h5><i class="fas fa-envelope"></i> {{ list.notifyEmail }}</h5>
-                                    <h5 class="mb-0"><i class="fas fa-phone"></i>+{{ list.countryCode }} {{ list.phone }}</h5>
+                                    <h5 class="mb-0"><i class="fas fa-phone"></i>+{{ list.countryCode }} {{ list.phone
+                                        }}</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="appointment-action">
-                            <a href="javascript:void(0);"
-                            id="{{list._id}}"
-                            (click)="individualAppointmentDetails(list._id)"
-                            class="btn btn-sm bg-info-light"
-                            data-toggle="modal" 
-                            data-target="#appt_details">
+                            <a href="javascript:void(0);" id="{{list._id}}"
+                                (click)="individualAppointmentDetails(list._id)" class="btn btn-sm bg-info-light"
+                                data-toggle="modal" data-target="#appt_details">
                                 <i class="far fa-eye"></i> View
                             </a>
-                            <a 
-                            *ngIf="list.currentStatus === 'Pending' " 
-                            href="javascript:void(0);"
-                            (click)="updateStatus('accept', list._id)"
-                            class="btn btn-sm bg-success-light">
+                            <a *ngIf="list.currentStatus === 'Pending' " href="javascript:void(0);"
+                                (click)="updateStatus('accept', list._id)" class="btn btn-sm bg-success-light">
                                 <i class="fas fa-check"></i> Confirm
                             </a>
-                            <a 
-                            *ngIf="list.currentStatus === 'Accept' " 
-                            href="javascript:void(0);" 
-                            class="btn btn-sm bg-success-light"
-                            (click)="completeRequest(list._id)"
-                            data-toggle="modal" 
-                            data-target="#appt_comp_details"
-                            data-backdrop="static">
+                            <a *ngIf="list.currentStatus === 'Accept' " href="javascript:void(0);"
+                                class="btn btn-sm bg-success-light" (click)="completeRequest(list._id)"
+                                data-toggle="modal" data-target="#appt_comp_details" data-backdrop="static">
                                 <i class="fas fa-check"></i> Completed
                             </a>
-                            <a
-                            *ngIf="list.currentStatus === 'Accept' " 
-                            (click)="updateStatus('reallocate', list._id)"
-                            href="javascript:void(0);" 
-                            class="btn btn-sm bg-danger-light">
+                            <a *ngIf="list.currentStatus === 'Accept' " (click)="updateStatus('reallocate', list._id)"
+                                href="javascript:void(0);" class="btn btn-sm bg-danger-light">
                                 <i class="fas fa-times"></i> ReSchedule
                             </a>
                         </div>
@@ -88,11 +101,9 @@
                             * perPage), total) }} of {{ total }} entries </p>
                     </div>
                     <div class="col-sm-12 col-md-7 text-right">
-                        <pagination-controls [directionLinks]="directionLinks"
-                            [autoHide]="autoHide" [responsive]="responsive"
-                            [previousLabel]="labels.previousLabel"
-                            [nextLabel]="labels.nextLabel"
-                            (pageChange)="onPageChange($event)">
+                        <pagination-controls [directionLinks]="directionLinks" [autoHide]="autoHide"
+                            [responsive]="responsive" [previousLabel]="labels.previousLabel"
+                            [nextLabel]="labels.nextLabel" (pageChange)="onPageChange($event)">
                         </pagination-controls>
                     </div>
                 </div>
@@ -101,7 +112,7 @@
 
     </div>
 
-</div>		
+</div>
 <!-- /Page Content -->
 
 
@@ -122,14 +133,23 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <span class="title">#{{individualDetails?.appointmentId}}</span>
-                                    <span class="text">{{individualDetails?.appointmentDate | date: 'dd MMM yyyy'}} {{individualDetails?.appointmentTime}}</span>
+                                    <span class="text">{{individualDetails?.appointmentDate | date: 'dd MMM yyyy'}}
+                                        {{individualDetails?.appointmentTime}}</span>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="text-right">
-                                        <button *ngIf="individualDetails?.currentStatus === 'Accept' " type="button" disabled class="btn bg-success-light btn-sm" id="topup_status">Confirm</button>
-                                        <button *ngIf="individualDetails?.currentStatus === 'Completed' " type="button" disabled class="btn bg-success-light btn-sm" id="topup_status">Completed</button>
-                                        <button *ngIf="individualDetails?.currentStatus === 'Reallocate' " type="button" disabled class="btn btn-sm bg-danger-light" id="topup_status">ReSchedule</button>
-                                        <button *ngIf="individualDetails?.currentStatus === 'Pending' " type="button" disabled class="btn btn-sm bg-danger-light" id="topup_status">Pending</button>
+                                        <button *ngIf="individualDetails?.currentStatus === 'Accept' " type="button"
+                                            disabled class="btn bg-success-light btn-sm"
+                                            id="topup_status">Confirm</button>
+                                        <button *ngIf="individualDetails?.currentStatus === 'Completed' " type="button"
+                                            disabled class="btn bg-success-light btn-sm"
+                                            id="topup_status">Completed</button>
+                                        <button *ngIf="individualDetails?.currentStatus === 'Reallocate' " type="button"
+                                            disabled class="btn btn-sm bg-danger-light"
+                                            id="topup_status">ReSchedule</button>
+                                        <button *ngIf="individualDetails?.currentStatus === 'Pending' " type="button"
+                                            disabled class="btn btn-sm bg-danger-light"
+                                            id="topup_status">Pending</button>
                                     </div>
                                 </div>
                             </div>
@@ -170,44 +190,44 @@
             <div class="modal-body">
                 <form [formGroup]="completeForm" (ngSubmit)="submitCompleteRequest()">
                     <div class="form-group">
-                      <label for="recipient-name" class="col-form-label">Description <span class="text-danger">*</span></label>
-                      <textarea 
-                      [ngClass]="completeValidation.description.errors ? 'is-invalid' : ''"
-                      class="form-control" 
-                      id="descArea" cols="10" rows="5" formControlName="description"></textarea>
-                      <div *ngIf="completeValidation.description.errors" class="invalid-feedback">
-                        <div *ngIf="completeValidation.description.errors.required">Description is Mandatory</div>
-                    </div>
+                        <label for="recipient-name" class="col-form-label">Description <span
+                                class="text-danger">*</span></label>
+                        <textarea [ngClass]="completeValidation.description.errors ? 'is-invalid' : ''"
+                            class="form-control" id="descArea" cols="10" rows="5"
+                            formControlName="description"></textarea>
+                        <div *ngIf="completeValidation.description.errors" class="invalid-feedback">
+                            <div *ngIf="completeValidation.description.errors.required">Description is Mandatory</div>
+                        </div>
                     </div>
                     <div class="form-group">
-                      <label for="message-text" class="col-form-label"> Prescription (R<sub>x</sub>) <span class="text-danger">*</span></label>
-                      <textarea 
-                      [ngClass]="completeValidation.suggestion.errors ? 'is-invalid' : ''"
-                      class="form-control" 
-                      id="drug_suggestion" cols="10" rows="5" formControlName="suggestion"></textarea>
-                      <div *ngIf="completeValidation.suggestion.errors" class="invalid-feedback">
-                        <div *ngIf="completeValidation.suggestion.errors.required">Prescription is Mandatory</div>
-                    </div>
+                        <label for="message-text" class="col-form-label"> Prescription (R<sub>x</sub>) <span
+                                class="text-danger">*</span></label>
+                        <textarea [ngClass]="completeValidation.suggestion.errors ? 'is-invalid' : ''"
+                            class="form-control" id="drug_suggestion" cols="10" rows="5"
+                            formControlName="suggestion"></textarea>
+                        <div *ngIf="completeValidation.suggestion.errors" class="invalid-feedback">
+                            <div *ngIf="completeValidation.suggestion.errors.required">Prescription is Mandatory</div>
+                        </div>
                     </div>
                     <div class="form-group">
                         <div class="row">
                             <div *ngFor='let url of urls, let i = index;' class="column container">
-                                <img [src]="url" style="width:100%"/>
+                                <img [src]="url" style="width:100%" />
                                 <p class="mod_title">R<sub>x</sub></p>
                                 <div class="mod_overlay"></div>
-                                <div class="mod_button"><a href="javascript:void(0);" (click)=removePhoto(i)> REMOVE </a></div>
+                                <div class="mod_button"><a href="javascript:void(0);" (click)=removePhoto(i)> REMOVE
+                                    </a></div>
                             </div>
                         </div>
                         <div class="field-wrap">
-                            <input class="form-control" id="fileChosen" type='file' accept=".png, .jpg, .jpeg, .gif" (change)="onSelectFile($event)" multiple>
+                            <input class="form-control" id="fileChosen" type='file' accept=".png, .jpg, .jpeg, .gif"
+                                (change)="onSelectFile($event)" multiple>
                         </div>
                     </div>
-                    
-                      <button 
-                      [disabled] = 'completeForm.invalid'
-                      type="submit"
-                      class="btn btn-primary submit-btn">Submit</button>
-                  </form>
+
+                    <button [disabled]='completeForm.invalid' type="submit"
+                        class="btn btn-primary submit-btn">Submit</button>
+                </form>
             </div>
         </div>
     </div>
