--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -5911,9 +5911,11 @@ section.iq-features {
 .invoice-content {
     background-color: #fff;
     border: 1px solid #f0f0f0;
-    border-radius: 4px;
+    border-radius: 34px;
     margin-bottom: 30px;
     padding: 30px;
+    border-color: #4284c0;
+    border-width: thick;
 }
 
 .invoice-item .invoice-logo {
