--- a/src/app/shared/components/login-modal/login-modal.component.html
+++ b/src/app/shared/components/login-modal/login-modal.component.html
@@ -1,13 +1,10 @@
-<li class="nav-item">
-    <a class="nav-link btn-grad" href="login.html" data-toggle="modal" data-backdrop="static" data-target="#exampleModal" > <i class="fa fa-user " aria-hidden="true" id="loginCall"></i> </a>
-</li>
 
 <!-- Modal -->
-<!-- <div class="modal fade login-modal" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel">
-    <div class="modal-dialog">
+<div class="modal fade show"  tabindex="-1" role="dialog" [ngStyle]="style">
+    <div class="modal-dialog"  role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" id="closeModal" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" id="closeModal" class="close" data-dismiss="modal" aria-label="Close" (click)="cancelClicked()">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -16,7 +13,7 @@
                     <img src="../../../assets/img/teladent.png" alt="">
                 </div>
               
-                <div class="login-form" *ngIf="showHideForm.login">
+                <div class="login-form">
                     <form [formGroup]="loginForm" (ngSubmit)="submitLogin()">
                         <div class="form-group">
                             <ngx-intl-tel-input [cssClass]="'form-control custom'" [enableAutoCountrySelect]="false" [enablePlaceholder]="true" [searchCountryFlag]="true" [customPlaceholder]="'XXXXXXXXXX'" [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name, SearchCountryField.DialCode]"
@@ -35,7 +32,7 @@
                             </div>
                         </div>
                         <div class="text-right">
-                            <a class="forgot-link" href="javascript:void(0);" (click)="forgotPassword()">Forgot Password
+                            <a class="forgot-link" href="javascript:void(0);">Forgot Password
                                 ?</a>
                         </div>
                         <button class="btn btn-primary btn-block btn-lg btn-grad" type="submit">Login</button>
@@ -48,4 +45,4 @@
             </div>
         </div>
     </div>
-</div> -->
+</div>
