--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -51,10 +51,10 @@
                         <h2 class="footer-title ">For Patients</h2>
                         <ul>
                             <!-- <li><a href="search.html ">Search for Clinics</a></li> -->
-                            <li><a (click)="patientRouter('login')" href="javascript:void(0); ">Login</a></li>
-                            <li><a (click)="patientRouter('signup')" href="javascript:void(0);">Register</a></li>
-                            <li><a (click)="patientRouter('booking')" href="javascript:void(0);">Booking Appointment</a></li>
-                            <li><a (click)="open('login-modal','Abhishek')" href="javascript:void(0);">Patient Dashboard</a></li>
+                            <li><a (click)="patientRouter('login', 'login-modal', '/index', 'user')" href="javascript:void(0); ">Login</a></li>
+                            <li><a (click)="patientRouter('signup', 'login-modal', '/index', 'user')" href="javascript:void(0);">Register</a></li>
+                            <li><a (click)="patientRouter('booking', 'login-modal', '/online-consultation?limit=10&skip=0', 'user')" href="javascript:void(0);">Booking Appointment</a></li>
+                            <li><a (click)="patientRouter('patientDash', 'login-modal', '/patient-panel/patient-dashboard', 'user')" href="javascript:void(0);">Patient Dashboard</a></li>
                             <app-login-modal></app-login-modal>
                         </ul>
                     </div>
@@ -68,11 +68,11 @@
                     <div class="footer-widget footer-menu ">
                         <h2 class="footer-title ">For Dentist</h2>
                         <ul>
-                            <li><a (click)="densitRouter('appointment')" href="javascript:void(0);">Appointments</a></li>
+                            <li><a (click)="densitRouter('appointment', 'login-modal', '/doctors-panel/doctor-appointments', 'onlineDoctors')" href="javascript:void(0);">Appointments</a></li>
                             <!-- <li><a href="chat.html ">Chat</a></li> -->
-                            <li><a (click)="densitRouter('login')" href="javascript:void(0);">Login</a></li>
-                            <li><a (click)="densitRouter('signup')" href="javascript:void(0);">Register</a></li>
-                            <li><a (click)="densitRouter('doctorDash')" href="javascript:void(0);">Dentist Dashboard</a></li>
+                            <li><a (click)="densitRouter('login', 'login-modal', '/index', 'onlineDoctors')" href="javascript:void(0);">Login</a></li>
+                            <li><a (click)="densitRouter('signup', 'login-modal', '/index', 'onlineDoctors')" href="javascript:void(0);">Register</a></li>
+                            <li><a (click)="densitRouter('doctorDash', 'login-modal', '/doctor-dashboard', 'onlineDoctors')" href="javascript:void(0);">Dentist Dashboard</a></li>
                         </ul>
                     </div>
                     <!-- /Footer Widget -->
