--- a/src/app/module/patient-panel/invoice-pdf/invoice-pdf.component.html
+++ b/src/app/module/patient-panel/invoice-pdf/invoice-pdf.component.html
@@ -1,13 +1,12 @@
 <ngx-ui-loader [loaderId]="'loader-02'"></ngx-ui-loader>
 
-<div class="content">
-    <div class="container">
+
         <!-- Invoice Content -->
-        <div class="content" id="htmlData">
+        <div class="content" >
             <div class="container-fluid">
 
-                <div class="row" id="htmlData">
-                    <div class="col-lg-8 offset-lg-2">
+                <div class="row">
+                    <div class="col-lg-8 offset-lg-2" id="htmlData">
                         <div class="invoice-content">
                             <div class="invoice-item">
                                 <div class="row">
@@ -144,9 +143,7 @@
             
         </div>
         <!-- /Invoice Content -->
-        <!-- <div class="vertical-center">
-            <button type="submit" class="btn btn-primary submit-btn" (click)="openPDF()">Save as Pdf</button>
-        </div> -->
-    </div>
-
-</div>
+        <div class="vertical-center">
+            <button type="submit" class="btn btn-primary submit-btn" (click)="generarPDF()">Save as Pdf</button>
+        </div>
+\
