--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -12,7 +12,7 @@
                         <div class="footer-logo ">
                             <h1 class="text-white ">
 
-                                Teladent
+                                <img src="assets/img/flogo.png">
                             </h1>
                             <!-- <img src="assets/img/teladent_2.png " alt="logo "> -->
                         </div>
